welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:10: error: ')' expected but integer literal found.
        if(% y ==2){
                 ^Diagonal:14: error: illegal start of simple expression
  }
  ^